# tap-chat

./: Makefile  pyproject.toml  requirements.txt
.github/workflows/: main_tap-chat-backend.yml  main_tap-chat-frontend.yml
src/tap_chat/backend/: main.py
src/tap_chat/frontend/: app.py
