[tool.poetry]
name = "tap-chat"
version = "0.1.0"
description = "A FastAPI + Streamlit chat app"
authors = ["Tapster"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110"
uvicorn = "^0.29"
streamlit = "^1.32"
httpx = "^0.27"  # Streamlit will call FastAPI via HTTP

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
